[project]
name = "rabit-propfirm-drl"
version = "0.1.0"
description = "Zero-Hardcoded DRL Trading System for Prop Firm Intraday Trading"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "numpy>=1.24",
    "polars>=0.20",
    "torch>=2.0",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]
ml = [
    "stable-baselines3>=2.0",
    "wandb>=0.16",
    "hmmlearn>=0.3",
    "shap>=0.43",
    "optuna>=3.0",
]
live = [
    "MetaTrader5>=5.0",
    "httpx>=0.27",          # For Telegram bot
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["rabit_propfirm_drl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["rabit_propfirm_drl"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
